@@ -1,5 +1,8 @@
 2004-05-12  Lassi A. Tuura  <lat@iki.fi>
 
+	* igprof, IgProfMem.cc: Counters now have counts as well as
+	totals, no need for allocations counter any more.
+
 	* igprof-analyse: First semi-functional version.
 
 	* IgProfMem.cc, IgProfPerf.cc, IgProfFileDesc.cc: Remove
